Bug 411769 - Enter more recipients than permitted - error message for each recipient
Summary: Enter more recipients than permitted - error message for each recipient
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 5.12.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-09 20:13 UTC by Axel Braun
Modified: 2019-09-10 05:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.12.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Axel Braun 2019-09-09 20:13:02 UTC
Kmail contains a setting for the maximum number or recipients.
If you paste more than this amount of recipients into the recipient field, it issues one error message per recipient. That may be some hundred messages to click away...one message in total would be sufficient
Comment 1 Laurent Montel 2019-09-10 04:55:10 UTC
I confirm it.
Comment 2 Laurent Montel 2019-09-10 05:46:52 UTC
Git commit 7605f3b754c523a6e473dbedc6fb3dc2745f09f2 by Laurent Montel.
Committed on 10/09/2019 at 05:46.
Pushed by mlaurent into branch 'Applications/19.08'.

Fix Bug 411769 - Enter more recipients than permitted - error message for each recipient

FIXED-IN: 5.12.2

M  +8    -3    messagecomposer/src/recipient/recipientseditor.cpp

https://commits.kde.org/messagelib/7605f3b754c523a6e473dbedc6fb3dc2745f09f2
Comment 3 Axel Braun 2019-09-10 05:53:38 UTC
(In reply to Laurent Montel from comment #2)
 
> FIXED-IN: 5.12.2

That was a quick one - thank you Laurent!