Fix Bug 411769 - Enter more recipients than permitted - error message for each recipient

FIXED-IN: 5.12.2
BUG: 411769